--- a/velocity-bs4/indexSinUsar.html
+++ b/velocity-bs4/indexSinUsar.html
@@ -32,7 +32,7 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="slam.html">¿Cómo crear un Slam?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="features.html">¿Cómo crear un Slam?</a></li>
                         <li class="nav-item"><a class="nav-link" href="pricing.html">¿Quiénes somos?</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Tipos de Preguntas <i class="fa fa-angle-down"></i></a>
